--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,10 @@
 body{
-    background: radial-gradient(rgb(245,20,20) 0%, rgb(50,0,0) 100%);
-    margin: 0;
-    padding: 0;
-    font-family: 'Courier', Courier New, monospace;
+    /*background: radial-gradient(rgb(245,20,20), rgb(50,0,0));
+    background-image: radial-gradient(rgb(0,0,0), rgb(100,0,0));
     background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
-* {
-    box-sizing: border-box;
+    background-attachment: fixed; */
+    margin: 0;
+    font-family: 'Courier', Courier New, monospace;
 }
 
 nav{
@@ -55,19 +51,31 @@ nav{
     text-decoration: none;
 }
 
-.fotouvod {
-    background-image: url('./content/LethalCompany.jpg');
+.fotouvod{
+    background-image: url(content/LethalCompany.jpg);
     background-size: cover;
     background-position: center;
     height: 100dvh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    z-index: 0;
 }
 
-.fotouvod h1 {
+.fotouvod h1{
     margin: 0 auto;
-    padding: 4px;
+    padding: 24px 4px;
     font-family: 'Courier', Courier New, monospace;
-    font-size: 64px;
+    font-size: 150px;
+}
+
+.selection{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.selectionItem{
+    align-self: flex-end;
+    text-decoration: none;
+    color: black;
+    border: 8px black;
+    border-radius: 32px;
 }
