--- a/assets/style.css
+++ b/assets/style.css
@@ -69,8 +69,9 @@ nav{
 
 .selection{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: flex-end;
+    width: 90vw;
 }
 
 .selectionItem{
@@ -80,7 +81,7 @@ nav{
     justify-content: center;
     align-items: center;
     background-color: rgb(100, 0, 0);
-    border: 8px white;
+    border: 8px solid white;
     border-radius: 32px;
 }
 
@@ -88,4 +89,12 @@ nav{
     text-decoration: none;
     color: white;
 
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 95dvh;
+    align-items: center;
 }
