--- a/assets/style.css
+++ b/assets/style.css
@@ -4,21 +4,35 @@ body{
     font-family: 'Courier', Courier New, monospace;
 }
 
-.stranka{
-    background-color: black;
+.Hra{
+    background: url(content/Lethal-Company-Bracken-2.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.Vyvoj{
+    background: url(content/Lethal-Company-Bracken.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.Vyvojar{
+    background: url(content/Lethal-Company-March.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 /* Navigace */
 nav{
-    position: sticky;
+    position: fixed;
+    width: 100vw;
     top: 0px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    z-index: 9999;
 }
 
 .nav{
-    background-color: rgb(70,0,0);
+    background-color: rgb(20,20,20);
     margin: 0;
     padding: 12px 0px;
     display: flex;
@@ -33,14 +47,18 @@ nav{
 .item{
     list-style: none;
     margin-right: 16px;
-    transition: .1s;
+    transition: .3s;
     padding: 4px;
     text-shadow: 4px 4px rgb(70, 0, 0);
 }
 
 .item:hover{
-    background-color: rgb(160, 15, 15);
+    background-color: rgb(111, 10, 10);
     border-radius: 28px;
+}
+
+.item:hover a{
+    color: rgb(200, 200, 200);
 }
 
 .item a{
@@ -49,6 +67,11 @@ nav{
     font-size: 24px;
     padding: 8px;
     border-radius: 24px;
+    transition: .3s;
+}
+
+.here a{
+    color: rgb(160,0,0);
 }
 
 .Logo {
@@ -60,14 +83,10 @@ nav{
 }
 
 .Logo a{
-    background: linear-gradient(to right,rgb(240,30,30), rgb(90,15,15));
+    background: linear-gradient(to left,rgb(240,30,30), rgb(90,0,0));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-decoration: none;
-}
-
-.here{
-    color:rgb(140, 0, 0)
 }
 
 /* Pozadi index.html */
@@ -105,7 +124,7 @@ nav{
 }
 
 .selectionItem{
-    animation: SlideBottom 1s ease-out;
+    animation: SlideBottom .7s ease-out;
     width: 350px;
     height: 300px;
     display: flex;
@@ -140,37 +159,35 @@ nav{
 }
 
 /* Obrazky index.html */
-.Hra{
+.HraObrazek{
     background-image: url(content/lethal-company-mods-more-players-steam-horror-game-550x309.jpg);
 }
 
-.Vyvoj{
+.VyvojObrazek{
     background-image: url(content/lethal_company_jester_active.jpg);
 }
 
-.Vyvojar{
+.VyvojarObrazek{
     background-image: url(content/lDDqu84j_400x400.jpg);
 }
 
-.Historie{
-    background-image: url(content/Lethal-Company_Alle-Monster-Liste-1089x600.jpg);
-}
-
-/* Container stranka.html*/
-.container{
+/* General Terminal */
+.Terminal{
     margin: 0 auto;
     width: 500px;
     height: 500px;
     padding: 16px;
-    top: 32px;
+    margin-top: 80px;
+    border: solid 16px rgb(51, 51, 51);
+    border-radius: 24px;
     background: radial-gradient(rgb(35,40,35), rgb(10,13,10));
     color: rgb(80, 200, 80);
     font-family: TerminalFont;
+    font-size: 24px;
+    overflow: hidden;
 }
 
-.p{
-    font-size: 28px;
-}
+
 
 
 
