--- a/assets/style.css
+++ b/assets/style.css
@@ -180,7 +180,7 @@ nav{
 .Terminal{
     margin: 0 auto;
     width: 500px;
-    height: 500px;
+    height: 450px;
     padding: 24px;
     margin-top: 80px;
     border: solid 16px rgb(51, 51, 51);
@@ -231,6 +231,7 @@ nav{
     border-radius: 48px;
 }
 
+/* text3 hra.html */
 #hra3{
     width: 900px;
     height: 550px;
