--- a/assets/style.css
+++ b/assets/style.css
@@ -97,9 +97,10 @@ nav{
 /* Pozadi index.html */
 .fotouvod{
     background-image: url(content/LethalCompany.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    height: 100dvh;
     text-align: center;
 }
 
@@ -114,9 +115,9 @@ nav{
 /* Nadpis index.html */
 .fotouvod h1{
     animation: MainNadpis 20s ease infinite;
-    margin: 0 auto;
+    margin: 32px auto;
     padding: 48px 16px;
-    font-size: 224px;
+    font-size: 214px;
     text-shadow: 8px 8px rgb(70, 0, 0);
 }
 
@@ -130,8 +131,8 @@ nav{
 
 .selectionItem{
     animation: SlideBottom .7s ease-out;
-    width: 350px;
-    height: 300px;
+    width: 400px;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -176,6 +177,14 @@ nav{
     background-image: url(content/lDDqu84j_400x400.jpg);
 }
 
+/* Globální */
+p{
+    padding: 18px;
+    font-family: TerminalFont;
+    font-weight: bold;
+}
+
+
 /* General Terminal */
 .Terminal{
     margin: 0 auto;
@@ -183,13 +192,18 @@ nav{
     height: 450px;
     padding: 24px;
     margin-top: 80px;
-    border: solid 16px rgb(51, 51, 51);
+    border: solid 4px rgb(51, 51, 51);
     border-radius: 24px;
     background: radial-gradient(rgb(35,40,35), rgb(10,13,10));
     color: rgb(80, 200, 80);
     font-family: TerminalFont;
-    font-size: 24px;
+    font-size: 32px;
     overflow: hidden;
+}
+
+.Terminal p{
+    padding: 2px;
+    margin: 8px;
 }
 
 .TerminalNav{
@@ -211,35 +225,87 @@ nav{
 /* text1 hra.html*/
 #hra1{
     width: 1500px;
-    height: 600px;
     background-color: rgba(121, 121, 121, 0.7);
     margin: 32px;
-    padding: 16px;
-    font-size: 32px;
+    padding: 32px;
+    font-size: 42px;
     border-radius: 48px;
+}
+
+#hra1 h2{
+    text-align: center;
+    width: auto;
+    margin: 0;
+    padding: 18px;
+    top: 0;
+    font-family: TerminalFont;
+    background-color: rgb(51, 51, 51);
+    color: rgb(200, 200, 200);
+}
+
+#hra1 .obsah{
+    margin: 0;
+    padding: 0;
+    background-color: rgba(75,75,75, 0.7);
+    border-radius: 50px;
+    overflow: hidden;
 }
 
 /* text2 hra.html*/
 #hra2{
     width: 1300px;
-    height: 600px;
     background-color: rgba(255, 45, 45, 0.7);
     margin: 0 0 0 auto;
     margin-right: 32px;
-    padding: 16px;
-    font-size: 28px;
+    padding: 32px;
+    font-size: 38px;
     border-radius: 48px;
+}
+
+#hra2 h2{
+    text-align: center;
+    width: auto;
+    margin: 0;
+    padding: 18px;
+    font-family: TerminalFont;
+    background-color: rgb(90, 0, 0);
+    color: rgb(250,0,0);
+}
+
+#hra2 .obsah{
+    margin: 0;
+    padding: 0;
+    background-color: rgba(120,30,30, 0.7);
+    border-radius: 50px;
+    overflow: hidden;
 }
 
 /* text3 hra.html */
 #hra3{
     width: 900px;
-    height: 550px;
-    background-color: rgba(180, 20, 50, 0.7);
+    background-color: rgba(180, 20, 108, 0.7);
     margin: 32px auto;
     padding: 16px;
     font-size: 28px;
     border-radius: 48px;
+}
+
+#hra3 h2{
+    text-align: center;
+    width: auto;
+    margin: 0;
+    padding: 18px;
+    font-family: TerminalFont;
+    background-color: rgb(90, 0, 90);
+    color: rgb(250, 0, 150);
+}
+
+#hra3 .obsah{
+    margin: 0;
+    padding: 0;
+    background-color: rgba(120, 30, 100, 0.7);
+    border-radius: 50px;
+    overflow: hidden;
 }
 
 
@@ -253,6 +319,7 @@ nav{
 
     /* Pozadí index.html*/
     .fotouvod h1{
+        margin: 0;
         font-size: 170px;
         top: 32px;
     }
@@ -263,22 +330,23 @@ nav{
         height: 250px;
     }
 
+    /* Terminál */
+    .Terminal{
+        font-size: 24px;
+    }
     /* text1 hra.html*/
     #hra1{
         width: 1000px;
-        height: 400px;
     }
 
     /* text2 hra.html*/
     #hra2{
         width: 750px;
-        height: 400px;
     }
 
     /* text3 hra.html */
     #hra3{
         width: 600px;
-        height: 300px;
     }
 }
 
@@ -330,12 +398,10 @@ nav{
     }
 
     /* texty hra.html */
-    #hra1, #hra2, #hra3{
+    #hra1, #hra2, #hra3, .obsah{
         margin: 0 auto;
         width: 300px;
-        height: 250px;
         font-size: 16px;
-        margin: 24px;
         padding: 12px;
     }
 
