--- a/assets/style.css
+++ b/assets/style.css
@@ -12,18 +12,21 @@ body{
     background: url(content/Lethal-Company-Bracken-2.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
 }
 
 .Vyvoj{
     background: url(content/Lethal-Company-Bracken.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
 }
 
 .Vyvojar{
     background: url(content/Lethal-Company-March.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
 }
 
 /* Navigace */
@@ -84,11 +87,11 @@ nav{
     font-size: 32px;
     font-weight: bolder;
     margin: 0px;
-    padding-left: 16px; 
+    padding-left: 16px;
 }
 
 .Logo a{
-    background: linear-gradient(to left,rgb(240,30,30), rgb(90,0,0));
+    background: linear-gradient(to left,rgb(240,30,30), rgb(80,200,80));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-decoration: none;
@@ -177,14 +180,6 @@ nav{
     background-image: url(content/lDDqu84j_400x400.jpg);
 }
 
-/* Globální */
-p{
-    padding: 18px;
-    font-family: TerminalFont;
-    font-weight: bold;
-}
-
-
 /* General Terminal */
 .Terminal{
     margin: 0 auto;
@@ -201,14 +196,19 @@ p{
     overflow: hidden;
 }
 
-.Terminal p{
-    padding: 2px;
-    margin: 8px;
+.Terminal .cara{
+    padding: 0;
+    margin: 0;
+}
+
+.Terminal h3{
+    margin: 16px;
 }
 
 .TerminalNav{
     list-style: none;
     padding-left: 0px;
+    margin-top: 0;
 }
 
 .TerminalNav a{
@@ -222,39 +222,52 @@ p{
     color: rgb(35,40,35);
 }
 
+/* Globalní hra.html */
+.Hra h2{
+    text-align: center;
+    width: auto;
+    margin: 0;
+    padding: 18px;
+    font-family: TerminalFont;
+}
+
+.Hra .obsah{
+    margin: 0;
+    padding: 0;
+    border-radius: 50px;
+    overflow: hidden;
+}
+
+.Hra p{
+    padding: 18px;
+    font-family: TerminalFont;
+    font-weight: bold;
+}
+
+
 /* text1 hra.html*/
 #hra1{
     width: 1500px;
-    background-color: rgba(121, 121, 121, 0.7);
-    margin: 32px;
+    background-color: rgba(121, 121, 121, 0.5);
+    margin: 32px 32px 32px 32px;
     padding: 32px;
     font-size: 42px;
     border-radius: 48px;
 }
 
 #hra1 h2{
-    text-align: center;
-    width: auto;
-    margin: 0;
-    padding: 18px;
-    top: 0;
-    font-family: TerminalFont;
     background-color: rgb(51, 51, 51);
     color: rgb(200, 200, 200);
 }
 
 #hra1 .obsah{
-    margin: 0;
-    padding: 0;
     background-color: rgba(75,75,75, 0.7);
-    border-radius: 50px;
-    overflow: hidden;
 }
 
 /* text2 hra.html*/
 #hra2{
     width: 1300px;
-    background-color: rgba(255, 45, 45, 0.7);
+    background-color: rgba(255, 45, 45, 0.5);
     margin: 0 0 0 auto;
     margin-right: 32px;
     padding: 32px;
@@ -263,51 +276,59 @@ p{
 }
 
 #hra2 h2{
-    text-align: center;
-    width: auto;
-    margin: 0;
-    padding: 18px;
-    font-family: TerminalFont;
     background-color: rgb(90, 0, 0);
     color: rgb(250,0,0);
 }
 
 #hra2 .obsah{
-    margin: 0;
-    padding: 0;
-    background-color: rgba(120,30,30, 0.7);
-    border-radius: 50px;
-    overflow: hidden;
+    background-color: rgba(240, 65, 65, 0.7);
 }
 
 /* text3 hra.html */
 #hra3{
-    width: 900px;
-    background-color: rgba(180, 20, 108, 0.7);
-    margin: 32px auto;
+    width: 1300px;
+    background-color: rgba(180, 20, 110, 0.5);
+    margin: 0 150px 0 150px;
     padding: 16px;
     font-size: 28px;
     border-radius: 48px;
+    display: flex;
+    justify-content: center;
+}
+
+#hra3 img{
+    width: 500px;
+    border-radius: 48px;
+    margin-left: 32px;
 }
 
 #hra3 h2{
-    text-align: center;
-    width: auto;
-    margin: 0;
-    padding: 18px;
-    font-family: TerminalFont;
     background-color: rgb(90, 0, 90);
     color: rgb(250, 0, 150);
 }
 
 #hra3 .obsah{
-    margin: 0;
-    padding: 0;
-    background-color: rgba(120, 30, 100, 0.7);
-    border-radius: 50px;
-    overflow: hidden;
+    background-color: rgba(255, 70, 215, 0.7);
 }
 
+/* text4 hra.html */
+#hra4{
+    width: 1700px;
+    background-color: rgba(180, 50, 20, 0.5);
+    margin: 0 auto;
+    padding: 16px;
+    font-size: 38px;
+    border-radius: 48px;
+}
+
+#hra4 h2{
+    background-color: rgb(90, 0, 0);
+    color: rgb(200, 0, 0);
+}
+
+#hra4 .obsah{
+    background-color: rgba(140, 0, 0, 0.7);
+}
 
 
 
@@ -374,6 +395,7 @@ p{
         width: 225px;
         height: 175px;
         font-size: 28px;
+        opacity: 1;
     }
 
     .selectionItem:hover{
