--- a/assets/style.css
+++ b/assets/style.css
@@ -353,7 +353,7 @@ nav{
 
     /* Terminál */
     .Terminal{
-        font-size: 24px;
+        font-size: 32px;
     }
     /* text1 hra.html*/
     #hra1{
@@ -367,8 +367,18 @@ nav{
 
     /* text3 hra.html */
     #hra3{
-        width: 600px;
+        width: 900px;
     }
+
+    #hra3 img{
+        width: 300px;
+    }
+
+    /* text3 hra.html*/
+    #hra4{
+        width: 1100px;
+    }
+
 }
 
 /* Mobile */
