--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,7 @@ html{
 body{
     padding: 0;
     margin: 0;
+    font-family: 'Courier', Courier New, monospace;
 }
 
 .Hra{
@@ -222,114 +223,113 @@ nav{
 }
 
 /* Globalní hra.html */
-.Hra{
-    h2{
-        text-align: center;
-        width: auto;
-        margin: 0;
-        padding: 18px;
-        font-family: TerminalFont;
-    }
+.Hra h2{
+    text-align: center;
+    width: auto;
+    margin: 0;
+    padding: 18px;
+    font-family: TerminalFont;
+}
 
-    .obsah{
-        margin: 0;
-        padding: 0;
-        border-radius: 50px;
-        overflow: hidden;
-    }
+.Hra .obsah{
+    margin: 0;
+    padding: 0;
+    border-radius: 50px;
+    overflow: hidden;
+}
 
-    p{
-        padding: 18px;
-        font-family: TerminalFont;
-        font-weight: bold;
-    }
+.Hra p{
+    padding: 18px;
+    font-family: TerminalFont;
+    font-weight: bold;
 }
 
 
 /* text1 hra.html*/
 #hra1{
-        width: 1500px;
-        background-color: rgba(121, 121, 121, 0.5);
-        margin: 32px 32px 32px 32px;
-        padding: 32px;
-        font-size: 42px;
-        border-radius: 48px;
+    width: 1500px;
+    background-color: rgba(121, 121, 121, 0.5);
+    margin: 32px 32px 32px 32px;
+    padding: 32px;
+    font-size: 42px;
+    border-radius: 48px;
+}
 
-    h2{
-        background-color: rgb(51, 51, 51);
-        color: rgb(200, 200, 200);
-    }
+#hra1 h2{
+    background-color: rgb(51, 51, 51);
+    color: rgb(200, 200, 200);
+}
 
-    .obsah{
-        background-color: rgba(75,75,75, 0.7);
-    }
+#hra1 .obsah{
+    background-color: rgba(75,75,75, 0.7);
 }
 
 /* text2 hra.html*/
 #hra2{
-        width: 1300px;
-        background-color: rgba(255, 45, 45, 0.5);
-        margin: 0 0 0 auto;
-        margin-right: 32px;
-        padding: 32px;
-        font-size: 38px;
-        border-radius: 48px;
+    width: 1300px;
+    background-color: rgba(255, 45, 45, 0.5);
+    margin: 0 0 0 auto;
+    margin-right: 32px;
+    padding: 32px;
+    font-size: 38px;
+    border-radius: 48px;
+}
 
-    h2{
-        background-color: rgb(90, 0, 0);
-        color: rgb(250,0,0);
-    }
+#hra2 h2{
+    background-color: rgb(90, 0, 0);
+    color: rgb(250,0,0);
+}
 
-    .obsah{
-        background-color: rgba(240, 65, 65, 0.7);
-    }
+#hra2 .obsah{
+    background-color: rgba(240, 65, 65, 0.7);
 }
 
 /* text3 hra.html */
 #hra3{
-        width: 1300px;
-        background-color: rgba(180, 20, 110, 0.5);
-        margin: 0 150px 0 150px;
-        padding: 16px;
-        font-size: 28px;
-        border-radius: 48px;
-        display: flex;
-        justify-content: center;
+    width: 1300px;
+    background-color: rgba(180, 20, 110, 0.5);
+    margin: 0 150px 0 150px;
+    padding: 16px;
+    font-size: 28px;
+    border-radius: 48px;
+    display: flex;
+    justify-content: center;
+}
 
-    img{
-        width: 500px;
-        border-radius: 48px;
-        margin-left: 32px;
-    }   
+#hra3 img{
+    width: 500px;
+    border-radius: 48px;
+    margin-left: 32px;
+}
 
-    h2{
-        background-color: rgb(90, 0, 90);
-        color: rgb(250, 0, 150);
-    }
+#hra3 h2{
+    background-color: rgb(90, 0, 90);
+    color: rgb(250, 0, 150);
+}
 
-    .obsah{
-        background-color: rgba(255, 70, 215, 0.7);
-    }
+#hra3 .obsah{
+    background-color: rgba(255, 70, 215, 0.7);
 }
 
 /* text4 hra.html */
 #hra4{
-        width: 1700px;
-        background-color: rgba(180, 50, 20, 0.5);
-        margin: 0 auto;
-        padding: 16px;
-        font-size: 38px;
-        border-radius: 48px;
-
-    h2{
-        background-color: rgb(90, 0, 0);
-        color: rgb(200, 0, 0);
-    }
-
-    .obsah{
-        background-color: rgba(140, 0, 0, 0.7);
-    }
+    width: 1700px;
+    background-color: rgba(180, 50, 20, 0.5);
+    margin: 0 auto;
+    padding: 16px;
+    font-size: 38px;
+    border-radius: 48px;
 }
+
+#hra4 h2{
+    background-color: rgb(90, 0, 0);
+    color: rgb(200, 0, 0);
+}
+
+#hra4 .obsah{
+    background-color: rgba(140, 0, 0, 0.7);
+}
+
 
 
 
@@ -430,19 +430,11 @@ nav{
     }
 
     /* texty hra.html */
-    #hra1, #hra2, #hra3, #hra4, .obsah{
+    #hra1, #hra2, #hra3, .obsah{
         margin: 0 auto;
         width: 300px;
         font-size: 16px;
         padding: 12px;
-    }
-
-    #hra3{
-        flex-direction: column;
-        img{
-            width: 300px;
-        }
-
     }
 
 }
