--- a/assets/style.css
+++ b/assets/style.css
@@ -145,8 +145,9 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex: 1;
     border: 8px solid;
-    border-radius: 32px;
+    border-radius: 48px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -511,6 +512,13 @@ p{
         width: 700px;
         margin-left: 32px;
     }
+
+    /* text3 vyvoj.html*/
+    #vyvoj3{
+        width: 750px;
+        margin-left: 32px;
+    }
+
 }
 
 /* Mobile */
@@ -533,8 +541,10 @@ p{
         background: radial-gradient(rgb(35,40,35), rgb(10,13,10));
     }
     .fotouvod h1{
-        font-size: 64px;
+        font-size: 68px;
         text-shadow: 2px 2px black;
+        margin-top: 12px;
+        padding: 0;
     }
 
     /* Výber index.html */
@@ -547,12 +557,9 @@ p{
     .selectionItem{
         width: 225px;
         height: 175px;
+        margin: 16px;
         font-size: 28px;
         opacity: 1;
-    }
-
-    .selectionItem:hover{
-        font-size: 32px;
     }
 
     /* Navigace */
@@ -561,6 +568,7 @@ p{
     }
     .nav a{
         font-size: 16px;
+        margin: 0;
     }
 
     /* Terminal */
@@ -579,17 +587,19 @@ p{
     }
 
     /* obrázky */
-    #hra3{
+    .Hra .flex{
         flex-direction: column;
     }
 
-    #hra3 img{
-        margin: 0;
+    .hra3img{
+        margin: 0 auto;
+        margin-top: 100px;
         width: 350px;
     }
 
     .SteamAwards{
         width: 350px;
+        margin: 75px auto;
     }
 
     .tweet .obsah{
