--- a/assets/style.css
+++ b/assets/style.css
@@ -161,6 +161,7 @@ nav{
     background-color: rgba(70, 0, 0, 0.6);
     border-radius: 48px;
     padding: 8px;
+    border: none;
 }
 
 .selectionItem:hover{
@@ -561,11 +562,13 @@ p{
 
     /* text3 hra.html */
     #hra3{
-        width: 900px;
+        width: 1000px;
+        margin-left: 16px;
     }
 
-    #hra3 img{
-        width: 300px;
+    .hra3img{
+        width: 500px;
+        margin-right: 16px;
     }
 
     /* text4 hra.html*/
@@ -596,6 +599,39 @@ p{
         margin-left: 32px;
     }
 
+    /* text4 vyvoj.html*/
+    #vyvoj4{
+        width: 900px;
+    }
+
+    /* text1 vyvojar.html*/
+    #vyvojar1{
+        font-size: 45px;
+    }
+
+    #vyvojar1 img{
+        width: 350px;
+    }
+
+    /* obrazek1 vyvojar.html */
+    .ZeekerssLCimg{
+        width: 1280px;
+    }
+
+    /* text2 vyvojar.html*/
+    #vyvojar2{
+        width: 850px;
+    }
+
+    /* obrazek2 vyvojar.html */
+    .ZeekerssITCHimg{
+        width: 1280px;
+    }
+
+    /* text3 vyvojar.html*/
+    #vyvojar3{
+        width: 1100px;
+    }
 }
 
 /* Mobile */
